Fix text wrapping and make explorer look better on mobile

--- a/explorer/src/scss/dashkit/_card.scss
+++ b/explorer/src/scss/dashkit/_card.scss
@@ -25,13 +25,20 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: $card-header-height;
+  min-height: $card-header-height;
   padding-top: math.div($card-spacer-y, 2);
   padding-bottom: math.div($card-spacer-y, 2);
 
   > *:first-child {
     flex: 1;
   }
+}
+
+.card-sub-header-title {
+  margin-bottom: 0;
+  white-space: normal;
+  font-size: medium;
+  line-height: 1.3;
 }
 
 .card-header + .card-footer {
